tests/baselines/reference/commentOnImportStatement3.errors.txt
==== tests/cases/compiler/commentOnImportStatement3.ts (2 errors) ====
    /* copyright */
    
    /* not copyright */
    import foo = require('./foo');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module ''./foo''.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.